chore(project): migrate to Java 11